--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solidjs/router": "^0.4.3",
     "express": "^4.18.1",
     "solid-js": "^1.5.6",
+    "solid-utils": "^0.8.1",
     "vite": "^3.1.3",
     "vite-plugin-solid": "^2.3.7"
   }
