--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "ss-rts",
+  "name": "solid-sandbox",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "node vite_express_server.js",
+    "dev": "nodemon --watch src --watch libs ./vite_express_server.js",
     "start": "vite",
     "build": "vite build",
     "server": "node vite_express_server.js"
   },
   "dependencies": {
     "@solidjs/router": "^0.4.3",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mongoose": "^6.6.2",
+    "node-fetch": "^3.2.10",
     "solid-js": "^1.5.6",
     "solid-utils": "^0.8.1",
+    "surrealdb.js": "^0.5.0",
+    "uuid": "^9.0.0",
     "vite": "^3.1.3",
-    "vite-plugin-solid": "^2.3.7"
+    "vite-plugin-solid": "^2.3.8"
   }
 }
