--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@solidjs/router": "^0.4.3",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "codemirror": "^6.0.1",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.2",
     "node-fetch": "^3.2.10",
+    "quill": "^1.3.7",
     "solid-js": "^1.5.6",
     "solid-utils": "^0.8.1",
     "surrealdb.js": "^0.5.0",
