--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "server": "node vite_express_server.js"
   },
   "dependencies": {
-    "@solidjs/router": "^0.4.3",
-    "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
+    "@editorjs/editorjs": "^2.25.0",
+    "@solidjs/router": "^0.5.0",
+    "axios": "^1.1.2",
+    "bcrypt": "^5.1.0",
     "codemirror": "^6.0.1",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "mongoose": "^6.6.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.6.5",
     "node-fetch": "^3.2.10",
-    "quill": "^1.3.7",
-    "solid-js": "^1.5.6",
+    "solid-js": "^1.5.7",
     "solid-utils": "^0.8.1",
     "surrealdb.js": "^0.5.0",
     "uuid": "^9.0.0",
-    "vite": "^3.1.3",
-    "vite-plugin-solid": "^2.3.8"
+    "vite": "^3.1.8",
+    "vite-plugin-solid": "^2.3.9"
   }
 }
