--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "server": "node vite_express_server.js"
   },
   "dependencies": {
+    "@editorjs/attaches": "^1.2.3",
     "@editorjs/editorjs": "^2.25.0",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/list": "^1.7.0",
+    "@editorjs/table": "^2.0.4",
+    "@editorjs/underline": "^1.0.0",
     "@solidjs/router": "^0.5.0",
     "axios": "^1.1.2",
     "bcrypt": "^5.1.0",
@@ -27,5 +32,16 @@
     "uuid": "^9.0.0",
     "vite": "^3.1.8",
     "vite-plugin-solid": "^2.3.9"
+  },
+  "devDependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/image": "^2.6.2",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.4.1",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/raw": "^2.3.1",
+    "@editorjs/warning": "^1.2.0"
   }
 }
