--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solid-sandbox",
   "version": "1.0.0",
-  "description": "",
+  "description": "- Prototype\r - Testing",
   "type": "module",
   "scripts": {
     "dev": "nodemon --watch src --watch libs ./vite_express_server.js",
@@ -10,38 +10,54 @@
     "server": "node vite_express_server.js"
   },
   "dependencies": {
-    "@editorjs/attaches": "^1.2.3",
-    "@editorjs/editorjs": "^2.25.0",
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/editorjs": "^2.26.2",
     "@editorjs/embed": "^2.5.3",
-    "@editorjs/list": "^1.7.0",
-    "@editorjs/table": "^2.0.4",
-    "@editorjs/underline": "^1.0.0",
-    "@solidjs/router": "^0.5.0",
-    "axios": "^1.1.2",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/table": "^2.1.2",
+    "@editorjs/underline": "^1.1.0",
+    "@solidjs/router": "^0.5.1",
+    "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "codemirror": "^6.0.1",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5",
-    "node-fetch": "^3.2.10",
-    "solid-js": "^1.5.7",
+    "mongoose": "^6.8.0",
+    "node-fetch": "^3.3.0",
+    "solid-js": "^1.6.3",
     "solid-utils": "^0.8.1",
     "surrealdb.js": "^0.5.0",
+    "three": "^0.147.0",
     "uuid": "^9.0.0",
-    "vite": "^3.1.8",
-    "vite-plugin-solid": "^2.3.9"
+    "vite": "^3.2.5",
+    "vite-plugin-solid": "^2.4.0"
   },
   "devDependencies": {
-    "@editorjs/checklist": "^1.3.0",
-    "@editorjs/code": "^2.7.0",
-    "@editorjs/image": "^2.6.2",
-    "@editorjs/inline-code": "^1.3.1",
-    "@editorjs/link": "^2.4.1",
-    "@editorjs/marker": "^1.2.2",
-    "@editorjs/quote": "^2.4.0",
-    "@editorjs/raw": "^2.3.1",
-    "@editorjs/warning": "^1.2.0"
-  }
+    "@editorjs/checklist": "^1.4.0",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/image": "^2.7.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/warning": "^1.3.0"
+  },
+  "main": "vite.config.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lightnet/solid-js-sandbox.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Lightnet/solid-js-sandbox/issues"
+  },
+  "homepage": "https://github.com/Lightnet/solid-js-sandbox#readme"
 }
