--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@editorjs/attaches": "^1.3.0",
-    "@editorjs/editorjs": "^2.26.2",
+    "@editorjs/editorjs": "^2.26.4",
     "@editorjs/embed": "^2.5.3",
     "@editorjs/list": "^1.8.0",
-    "@editorjs/table": "^2.1.2",
+    "@editorjs/table": "^2.2.0",
     "@editorjs/underline": "^1.1.0",
-    "@solidjs/router": "^0.5.1",
+    "@solidjs/router": "^0.6.0",
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "codemirror": "^6.0.1",
@@ -24,20 +24,21 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.0",
+    "mongoose": "^6.8.1",
     "node-fetch": "^3.3.0",
-    "solid-js": "^1.6.3",
+    "nodemailer": "^6.8.0",
+    "solid-js": "^1.6.6",
     "solid-utils": "^0.8.1",
     "surrealdb.js": "^0.5.0",
-    "three": "^0.147.0",
+    "three": "^0.148.0",
     "uuid": "^9.0.0",
-    "vite": "^3.2.5",
-    "vite-plugin-solid": "^2.4.0"
+    "vite": "^4.0.3",
+    "vite-plugin-solid": "^2.5.0"
   },
   "devDependencies": {
     "@editorjs/checklist": "^1.4.0",
     "@editorjs/code": "^2.8.0",
-    "@editorjs/image": "^2.7.1",
+    "@editorjs/image": "^2.8.1",
     "@editorjs/inline-code": "^1.4.0",
     "@editorjs/link": "^2.5.0",
     "@editorjs/marker": "^1.3.0",
